added authentication using JWT token

--- a/Client/src/app/login/login.component.html
+++ b/Client/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login__container">
-    <form action="" [formGroup]="loginForm" (ngSubmit)="onSubmit()" >
+    <form action="" [formGroup]="loginForm" (ngSubmit)="onLogin()" >
         <div class="login__card" >
             <h1>Log in</h1>
             <div class="email__input">
