added toast for login

--- a/Client/src/app/login/login.component.scss
+++ b/Client/src/app/login/login.component.scss
@@ -84,6 +84,7 @@ span{
                 color: $primary-color;
                 font-family: quicksand;
                 font-weight: 600;
+                cursor: pointer;
                 box-shadow: 0px 3px 5px #0000003D;
             }
         }   
