--- a/Client/src/app/login/login.component.html
+++ b/Client/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="login__container">
+    
     <form action="" [formGroup]="loginForm" (ngSubmit)="onLogin()" >
         <div class="login__card" >
             <h1>Log in</h1>
@@ -28,7 +29,8 @@
                 <input type="checkbox" name="rememberMe" id="rememberMe" formControlName="rememberMe"/> Remember Me
             </div>
             <div class="login__button">
-                <button href="">LOG IN</button>
+                <p-toast></p-toast>
+                <button href="" (click)="showSuccess()">LOG IN</button>
             </div>
             <div class="register__user">
                 <p>Not registered yet?</p>
