--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -35,6 +35,12 @@ $walk-in-portal-theme: mat.define-light-theme((
 
 @import "scss/variables";
 
+@import 'ngx-toastr/toastr';
+
+// @import 'ngx-toastr/toastr-bs5-alert';
+// @import "primeng/resources/themes/lara-light-blue/theme.css";
+// @import "primeng/resources/primeng.css";
+
 @font-face {
   font-family: quicksand;
   src: url(assets/Quicksand\ font\ 1/Quicksand-VariableFont_wght.ttf);
