--- a/Client/src/app/qualifications/qualifications.component.html
+++ b/Client/src/app/qualifications/qualifications.component.html
@@ -15,14 +15,14 @@
     </div>
     
         <div class="educational__qualification__body" [ngClass]="{educationalVisibility:!isEducationalQualificationVisible}" >
-            <form action="" class="educational__qualification__form">
+            <form class="educational__qualification__form" [formGroup]="EducationQualificationForm" >
                 <div class="aggregate_percentage">
                     <label for="AggregatePercentage">Aggregate Percentage*</label>
-                    <input type="number" id="AggregatePercentage">
+                    <input type="number" id="AggregatePercentage" formControlName="aggregatedPercentage">
                 </div>
                 <div class="year_of_passing">
                     <label for="YearOfPassing">Year of Passing*</label>
-                    <select name="YearOfPassing" id="YearOfPassing">
+                    <select name="YearOfPassing" id="YearOfPassing" formControlName="yearOfPassing">
                         <option value="2020">2020</option>
                         <option value="2021">2021</option>
                         <option value="2022">2022</option>
@@ -33,35 +33,40 @@
                 <div class="qualification_and_stream">
                     <div class="Qualification">
                         <label for="qualification">Qualification*</label>
-                        <select name="qualification" id="qualification">
-                            <option value="Btech">Bachelor in Technology (B.Tech)</option>
-                            <option value="Btech">Bachelor in Technology (B.Tech)</option>
+                        <select name="qualification" id="qualification" formControlName="qualification">
+                            @for (qual of qualificationArray; track $index) {
+                                <option [value]="qual">{{qual}}</option>
+                            }
                         </select>
                     </div>
                     <div class="Stream">
                         <label for="stream">Stream*</label>
-                        <select name="stream" id="stream">
-                            <option value="it">Information Technology</option>
-                            <option value="it">Information Technology</option>
+                        <select name="stream" id="stream" formControlName="stream">
+                            @for (stream of streamArray; track $index) {
+                                <option [value]="stream">{{stream}}</option>
+                            }
                         </select>
                     </div>
                 </div>
                 <div class="college_and_other_name">
                     <div class="college_name">
                         <label for="CollegeName">College*</label>
-                        <select name="CollegeName" id="CollegeName">
-                            <option value="PIT">Pune Institute of Technology (PIT)</option>
-                            <option value="CSPIT">CSPIT</option>
+                        
+
+                        <select name="CollegeName" id="CollegeName" formControlName="college">
+                            @for (college of collegeArray; track $index) {
+                                <option [value]="college">{{college}}</option>
+                            }
                         </select>
                     </div>
                     <div class="Other_college">
                         <label for="OtherCollege">If others, please enter your college name</label>
-                        <input type="text" id="OtherCollege">
+                        <input type="text" id="OtherCollege" formControlName="otherCollege">
                     </div>
                 </div>
                 <div class="college_location">
                     <label for="CollegeLocation">Where is your college located?*</label>
-                    <input type="text" id="CollegeLocation">
+                    <input type="text" id="CollegeLocation" formControlName="collegeLocation">
                 </div>
             </form>
         </div>
@@ -83,41 +88,31 @@
             </mat-icon>
         </div>
     </div>
-    <form action="" [hidden]="!isProfessionalQualificationVisible">
+    <form action="" [hidden]="!isProfessionalQualificationVisible" [formGroup]="ProfessionalQualificationForm">
         <div class="application__type">
             <label for="stream">Applicant Type*</label>
             <div class="application__radio">
                 <div>
-                    <input type="radio" name="application" id="fresher" [value]="false" [(ngModel)]="isExperienced" >Fresher
+                    <input type="radio" name="applicationType" id="fresher" value="fresher" formControlName="applicationType">Fresher
                 </div>
                 <div>
-                    <input type="radio" name="application" id="experienced" [value]="true" [(ngModel)]="isExperienced">Experienced
+                    <input type="radio" name="applicationType" id="experienced" value="experienced" formControlName="applicationType">Experienced
                 </div>
                 
             </div>
         </div>
 
         
-        @if(!isExperienced){
+        @if(this.ProfessionalQualificationForm.value.applicationType==='fresher'){
             <div class="fresher__application">
                     <div class="familiar__technologies">
                         <label for="">Select All The Technologies You Are Familiar In</label>
                         <div class="input_familiar__technologies">
-                            <div>
-                                <input type="checkbox" name="Javascript" id="Javascript" /> Javascript
-                            </div>
-                            <div>
-                                <input type="checkbox" name="Angular" id="Angular" /> Angular Js
-                            </div>
-                            <div>
-                                <input type="checkbox" name="React" id="React" /> React
-                            </div>
-                            <div>
-                                <input type="checkbox" name="Node" id="Node" /> Node Js
-                            </div>
-                            <div>
-                                <input type="checkbox" name="Others" id="Others" /> Others
-                            </div>
+                            @for (technology of technologiesArray; track $index) {
+                                <div>
+                                    <input type="checkbox" (change)="onChange($event,'familiarTechnologies')" [value]="technology" [id]="technology" /> {{technology}}
+                                </div>
+                            }
                         </div>
                         <label for="" >If others, please mention</label>
                         <input type="text" id="other__familier__technologies">
@@ -126,14 +121,16 @@
                         <label for="stream">Have You Appeared For Any Test By Zeus in the past 12 months?*</label>
                         <div class="previously__applied__radio">
                             <div>
-                                <input type="radio" name="previously__applied" id="Yes" >Yes
+                                <input type="radio" name="previouslyApplied" id="Yes" [value]="true" formControlName="previouslyApplied">Yes
                             </div>
                             <div>
-                                <input type="radio" name="previously__applied" id="No">No
+                                <input type="radio" name="previouslyApplied" id="No"
+                                [value]="false" formControlName="previouslyApplied">No
                             </div>
                         </div>
                         <label for="" >If Yes, which role did you apply for?</label>
-                        <input type="text" id="previously__applied__role">
+                        <input type="text" id="previously__applied__role"
+                        formControlName="previouslyAppliedRole">
                     </div>
             </div>
         }
@@ -141,80 +138,62 @@
             <div class="experienced__application">
                     <div class="years__of__exeperience">
                         <label for="yearsOfExeperience">Years of Experience*</label>
-                        <input type="number" id="yearsOfExeperience">
+                        <input type="number" id="yearsOfExeperience" formControlName="yearsOfExperience">
                     </div>
                     <div class="current__ctc">
                         <label for="currentCtc">Current CTC* (In Rupees)</label>
-                        <input type="number" id="currentCtc">
+                        <input type="number" id="currentCtc" formControlName="currentCtc">
                     </div>
                     <div class="expected__ctc">
                         <label for="expectedCtc">Expected CTC* (In Rupees)</label>
-                        <input type="number" id="expectedCtc">
+                        <input type="number" id="expectedCtc" formControlName="expectedCtc">
                     </div>
                     <div class="exeperties__technologies">
                         <label for="">Select All The Technologies You Expertise In*</label>
                         <div class="input_exeperties__technologies">
-                            <div>
-                                <input type="checkbox" name="Javascript" id="Javascript" /> Javascript
-                            </div>
-                            <div>
-                                <input type="checkbox" name="Angular" id="Angular" /> Angular Js
-                            </div>
-                            <div>
-                                <input type="checkbox" name="React" id="React" /> React
-                            </div>
-                            <div>
-                                <input type="checkbox" name="Node" id="Node" /> Node Js
-                            </div>
-                            <div>
-                                <input type="checkbox" name="Others" id="Others" /> Others
-                            </div>
+                            @for (technology of technologiesArray; track $index) {
+                                <div>
+                                    <input type="checkbox" [value]="technology" [id]="technology" (change)="onChange($event,'expertiseTechnology')"/> {{technology}}
+                                </div>
+                            }
                         </div>
-                        <label for="" >If others, please mention</label>
-                        <input type="text" id="other__familier__technologies">
+                        <label>If others, please mention</label>
+                        <input type="text" id="other__Expertise__technologies"
+                        formControlName="otherExpertiseTechnology">
                     </div>
                     <div class="familiar__technologies">
                         <label for="">Select All The Technologies You Are Familiar In</label>
                         <div class="input_familiar__technologies">
-                            <div>
-                                <input type="checkbox" name="Javascript" id="Javascript" /> Javascript
-                            </div>
-                            <div>
-                                <input type="checkbox" name="Angular" id="Angular" /> Angular Js
-                            </div>
-                            <div>
-                                <input type="checkbox" name="React" id="React" /> React
-                            </div>
-                            <div>
-                                <input type="checkbox" name="Node" id="Node" /> Node Js
-                            </div>
-                            <div>
-                                <input type="checkbox" name="Others" id="Others" /> Others
-                            </div>
+                            @for (technology of technologiesArray; track $index) {
+                                <div>
+                                    <input type="checkbox" [value]="technology" [id]="technology" (change)="onChange($event,'familiarTechnologies')"/> {{technology}}
+                                </div>
+                            }
                         </div>
-                        <label for="" >If others, please mention</label>
-                        <input type="text" id="other__familier__technologies">
+                        <label>If others, please mention</label>
+                        <input type="text" id="other__familier__technologies"
+                        formControlName="otherFamiliarTechnologies">
                     </div>
                     <div class="notice__period">
                         <label for="stream">Are you currently on notice period?*</label>
                         <div class="notice__period__radio">
                             <div>
-                                <input type="radio" name="notice__period" id="Yes" >Yes
+                                <input type="radio" name="noticePeriod" id="Yes" formControlName="noticePeriod" [value]="true">Yes
                             </div>
                             <div>
-                                <input type="radio" name="notice__period" id="No">No
+                                <input type="radio" name="noticePeriod" id="No" formControlName="noticePeriod" [value]="false">No
                             </div>
                         </div>
                         <div class="notice__period__info">
                             <div class="notice__period__end__date">
                                 <label for="" >If Yes, when will your notice period end?*</label>
-                                <input type="date" id="notice__period__end__date">
+                                <input type="date" id="notice__period__end__date" formControlName="noticePeriodDate">
                             </div>
                             <div class="notice__period__duration">
                                 <label for="" >How long is your notice period?* (Mention in months)</label>
-                                <select name="notice__period__duration" id="notice__period__duration">
-                                    <option value="2Months">2 months</option>
-                                    <option value="3Months">3 months</option>
+                                <select name="notice__period__duration" id="notice__period__duration" formControlName="noticePeriodDuration">
+                                    <option value="2 Months">2 months</option>
+                                    <option value="3 Months">3 months</option>
                                 </select>
                             </div>
                         </div>
@@ -223,14 +202,14 @@
                         <label for="stream">Have You Appeared For Any Test By Zeus in the past 12 months?*</label>
                         <div class="previously__applied__radio">
                             <div>
-                                <input type="radio" name="previously__applied" id="Yes" >Yes
+                                <input type="radio" name="previouslyApplied" id="Yes" formControlName="previouslyApplied" [value]="true">Yes
                             </div>
                             <div>
-                                <input type="radio" name="previously__applied" id="No">No
+                                <input type="radio" name="previouslyApplied" formControlName="previouslyApplied"id="No" [value]="false">No
                             </div>
                         </div>
                         <label for="" >If Yes, which role did you apply for?</label>
-                        <input type="text" id="previously__applied__role">
+                        <input type="text" id="previously__applied__role" formControlName="previouslyAppliedRole">
                     </div>
             </div>
         }
@@ -243,7 +222,7 @@
         <button (click)="this.parentComponent.moveToPreviousStep()">Previous</button>
     
     
-        <button (click)="this.parentComponent.moveToNextStep()">Next</button>
+        <button (click)="onSubmit()">Next</button>
     
     
 </div>
