--- a/Client/src/app/user-registration/user-registration.component.html
+++ b/Client/src/app/user-registration/user-registration.component.html
@@ -1,59 +1,73 @@
 <div class="registration__header">
-    <div class="registration__header__icon">
-        <a href="#"><mat-icon>arrow_back</mat-icon></a>
-    </div>
-    <div class="registration__header__title">
-        <h1>Create an account</h1>
-    </div>
-    <div class="registration__header__buttons">
-        <button class="btn">Cancel</button>
-        <button class="btn" [disabled]="isDisable">Create</button>
-    </div>
+  <div class="registration__header__icon">
+    <a href="#"><mat-icon>arrow_back</mat-icon></a>
+  </div>
+  <div class="registration__header__title">
+    <h1>Create an account</h1>
+  </div>
+  <div class="registration__header__buttons">
+    <button class="btn">Cancel</button>
+    <button class="btn" [disabled]="isDisable">Create</button>
+  </div>
 </div>
 
 <div class="registration__progress">
-    <div class="registration__steps">
-        <span [ngClass]="{step_count: true,already_completed:idCompletedThisStep(1)}">
-            @if (currentStep>1) {
-                <mat-icon>edit</mat-icon>
-            }
-            @else {1}
-        </span>
-        <span>Personal Information</span>
-    </div>
-    <hr/>
-    <div class="registration__steps">
-        <span [ngClass]="{step_count: true,already_completed:idCompletedThisStep(2)}">
-            @if (currentStep>2) {
-                <mat-icon>edit</mat-icon>
-            }
-            @else {2}
-        </span>
-        <span>Qualifications</span>
-    </div>
-    <hr/>
-    <div class="registration__steps">
-        <span [ngClass]="{step_count: true,already_completed:idCompletedThisStep(3)}">
-            @if (currentStep>3) {
-                <mat-icon>edit</mat-icon>
-            }
-            @else {3}
-        </span>
-        <span>Review and Proceed</span>
-    </div>
+  <div class="registration__steps">
+    <span
+      [ngClass]="{
+        step_count: true,
+        already_completed: idCompletedThisStep(1)
+      }"
+    >
+      @if (currentStep>1) {
+      <mat-icon>edit</mat-icon>
+      } @else {1}
+    </span>
+    <span>Personal Information</span>
+  </div>
+  <hr />
+  <div class="registration__steps">
+    <span
+      [ngClass]="{
+        step_count: true,
+        already_completed: idCompletedThisStep(2)
+      }"
+    >
+      @if (currentStep>2) {
+      <mat-icon>edit</mat-icon>
+      } @else {2}
+    </span>
+    <span>Qualifications</span>
+  </div>
+  <hr />
+  <div class="registration__steps">
+    <span
+      [ngClass]="{
+        step_count: true,
+        already_completed: idCompletedThisStep(3)
+      }"
+    >
+      @if (currentStep>3) {
+      <mat-icon>edit</mat-icon>
+      } @else {3}
+    </span>
+    <span>Review and Proceed</span>
+  </div>
 </div>
 
 @if (currentStep===1) {
-    <div [formGroup]="personalInformation">   
-        <app-personal-information [parentComponent]="this"></app-personal-information>
-    </div>
-    
-}
-@else if (currentStep===2) {
-    <app-qualifications [parentComponent]="this"></app-qualifications>
-}
-@else {
-    <app-preview-profile [parentComponent]="this"></app-preview-profile>
+<div [formGroup]="personalInformation">
+  <app-personal-information [parentComponent]="this"></app-personal-information>
+</div>
+
+} @else if (currentStep===2) {
+<app-qualifications
+  [parentComponent]="this"
+  [EducationQualificationForm]="EducationalQualification"
+  [ProfessionalQualificationForm]="professionalQualification"
+></app-qualifications>
+} @else {
+<app-preview-profile [parentComponent]="this"></app-preview-profile>
 }
 
 <!-- <div class="next__and__previous__btns">
@@ -63,7 +77,4 @@
     @if (currentStep!=3) {
         <button (click)="moveToNextStep()">Next</button>
     }
-    
 </div> -->
-
-
