added form validations

--- a/Client/src/app/personal-information/personal-information.component.html
+++ b/Client/src/app/personal-information/personal-information.component.html
@@ -82,5 +82,6 @@
 </div>
 
 <div class="next__and__previous__btns">
-    <button type="submit" (click)="onSubmit()" (click)="this.parentComponent.moveToNextStep()">Next</button>
+    <p-toast></p-toast>
+    <button type="submit" (click)="onCheck()">Next</button>
 </div>
