--- a/Client/src/app/qualifications/qualifications.component.html
+++ b/Client/src/app/qualifications/qualifications.component.html
@@ -218,11 +218,12 @@
 </div>
 
 <div class="next__and__previous__btns">
+    <p-toast></p-toast>
     
         <button (click)="this.parentComponent.moveToPreviousStep()">Previous</button>
     
     
-        <button (click)="onSubmit()">Next</button>
+        <button (click)="onCheck()">Next</button>
     
     
 </div>
