--- a/Client/src/styles.scss
+++ b/Client/src/styles.scss
@@ -37,6 +37,9 @@ $walk-in-portal-theme: mat.define-light-theme((
 
 @import 'ngx-toastr/toastr';
 
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+
 // @import 'ngx-toastr/toastr-bs5-alert';
 // @import "primeng/resources/themes/lara-light-blue/theme.css";
 // @import "primeng/resources/primeng.css";
